update login.html , registration.html, home.html style.css  make menu fixed , and fix overlapping

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -42,6 +42,7 @@ body {
     color: black;
     text-align: center;
     cursor: pointer;
+    font-weight: bold;
     transition: 0.3s;
 }
 
@@ -54,6 +55,11 @@ body {
     width: 100%;
     height: 50px;
     background-color: rgba(255, 255, 255, 0.4);
+    position: fixed;
+}
+
+#mainContentWithoutMenu {
+    padding-top: 50px;
 }
 
 .header .button {
@@ -74,7 +80,6 @@ body {
 /*LOGIN*/
 .loginTable {
     margin: 20px;
-    padding: 20px;
     border: 0px solid darkgreen;
     background-color: rgba(255, 255, 255, 0.7);
     box-shadow: 0px 0px 10px 10px rgba(0, 100, 0, 0.1);
@@ -83,11 +88,13 @@ body {
 }
 
 .loginTable td {
-    height: 40px;
+    height: 35px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .loginTable input {
-    width: 400px;
+    width: 320px;
     height: 30px;
 }
 
@@ -98,7 +105,6 @@ body {
 /*REGISTRATION*/
 .registrationTable {
     margin: 20px;
-    padding: 20px;
     border: 0px solid #006400;
     background-color: rgba(255, 255, 255, 0.7);
     box-shadow: 0px 0px 10px 10px rgba(0, 100, 0, 0.1);
@@ -108,7 +114,9 @@ body {
 
 .registrationTable td {
     text-align: left;
-    height: 40px;
+    height: 35px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .registrationTable input {
